tests/samples/valid/line.pn
import "position.pn";

word128 Line
{
	from: Position,
	to: Position,
}
